Add JS password validation to change password htmls

--- a/src/main/resources/templates/resetPassword.html
+++ b/src/main/resources/templates/resetPassword.html
@@ -11,26 +11,27 @@
 
 	<link rel="stylesheet" type="text/css" th:href="@{/css/font-awesome.min.css}"/>
 
-<title>Reset password</title>
+<title th:text="#{resetPassword}">Reset password</title>
 </head>
 <body>
 	<div class="container">
-		<h1>Reset Password</h1>
+		<br><br>
+		<h1 class="offset-3 px-3" th:text="#{resetPassword}">Reset Password</h1>
 		<br />
 		<div th:if="${errorMessage}" th:text="${errorMessage}" class="alert alert-danger">Error Message</div>
 
 		<form th:action="@{/users/resetPassword}" method="post" class="form-horizontal">
 			<div class="row">
-				<label class="col-sm-1 h5" for="email">Email:</label>
+				<label class="col-sm-1 h5 offset-2" for="email">Email:</label>
 				<span class="col-sm-5">
-					<input class="form-control" id="email" name="email" type="email" />
+					<input class="form-control" id="email" name="email" type="email" th:placeholder="#{email}"/>
 				</span>
-				<button class="btn btn-primary" type="submit">Reset Password</button>
+				<button class="btn btn-primary" type="submit" th:text="#{resetPassword}">Reset Password</button>
 			</div>
 		</form>
 
 		<br />
-		<a class="btn btn-primary" th:href="@{/login}">Sign In</a>
+		<a class="btn btn-primary offset-2" th:href="@{/login}" th:text="#{signIn}">Sign In</a>
 	</div>
 </body>
 </html>
