--- a/src/main/resources/templates/users/user-change-password-form.html
+++ b/src/main/resources/templates/users/user-change-password-form.html
@@ -11,34 +11,75 @@
 
     <link rel="stylesheet" type="text/css" th:href="@{/css/font-awesome.min.css}"/>
 
-    <title>Change Password</title>
+    <script th:src="@{/js/jquery-1.7.2.js}"></script>
+
+    <script th:src="@{/js/pwstrength.js}"></script>
+
+    <title th:text="#{changePassword}">Change Password</title>
 </head>
 <body>
 <div class="container">
-    <h1>Change Password</h1>
+    <br><br>
+    <h1 class="offset-3 px-3" th:text="#{changePassword}">Change Password</h1>
     <br />
 
     <form th:action="@{'/users/changePasswordForUser/' + ${id}}" action="#" method="post" class="form-horizontal">
         <div th:if="${errorMessage}" th:text="${errorMessage}" class="alert alert-danger">Message</div>
 
-        <div class="form-group">
-            <label class="control-label col-xs-2" for="password">Password</label>
-            <div class="col-xs-10">
-                <input id="password" type="password" name="password" />
+        <div class="row mb-3">
+            <div class="col-sm-2 form-control-plaintext offset-sm-1">
+                <h6 th:text="#{password} + ':'" class="pull-right">Password:</h6>
+            </div>
+            <div class="col-sm-5">
+                <input id="password" type="password" name="password" class="form-control" th:placeholder="#{password}"/>
             </div>
         </div>
-        <div class="form-group">
-            <label class="control-label col-xs-2" for="passwordConfirmation">Password Confirmation</label>
-            <div class="col-xs-10">
-                <input id="passwordConfirmation" type="password" name="passwordConfirmation" />
+
+        <div class="row mb-3">
+            <div class="col-sm-2 form-control-plaintext offset-sm-1">
+                <h6 th:text="#{passwordConfirmation} + ':'" class="pull-right">Password confirmation:</h6>
+            </div>
+            <div class="col-sm-5">
+                <input id="passwordConfirmation" type="password" name="passwordConfirmation" class="form-control" th:placeholder="#{passwordConfirmation}"/>
             </div>
         </div>
+
+
+
+
+
 <!--        <input id="id" type="hidden" name="id" th:value="${id}" />-->
-        <div class="form-actions col-xs-offset-2 col-xs-10">
-            <input type="submit" class="btn btn-primary" value="Change Password" />
+        <div class="row">
+            <button type="submit" class="btn-sm btn-primary offset-6" th:text="#{changePassword}">Change password</button>
         </div>
     </form>
 
 </div>
+
+<script type="text/javascript">
+    $(document)
+        .ready(
+            function() {
+                options = {
+                    common : {
+                        minChar : 4
+                    },
+                    ui : {
+                        showVerdictsInsideProgressBar : true,
+                        showErrors : true,
+                        errorMessages : {
+                            wordLength : 'Your password is too short',
+                            wordNotEmail : 'Do not use your email as your password'
+                            // wordSequences : 'Your password contains sequences',
+                            // wordLowercase : 'Use lower case characters',
+                            // wordUppercase : 'Use upper case characters',
+                            // wordOneNumber : 'Use numbers',
+                            // wordOneSpecialChar : 'Use special characters: [~!@#$%^&amp;*,_?]'
+                        }
+                    }
+                };
+                $('#password').pwstrength(options);
+            });
+</script>
 </body>
 </html>
