Add JS password validation to admin change password for user html

--- a/src/main/resources/templates/loginPage.html
+++ b/src/main/resources/templates/loginPage.html
@@ -25,6 +25,7 @@
     <div th:if="${param.error}" class="alert alert-danger col-sm-5 offset-3 text-center" th:text="#{invalidNameAndPass}">Invalid username and password.</div>
     <div th:if="${emailSent}" th:text="#{emailSent}" class="alert alert-success col-sm-5 offset-3 text-center">Email Sent</div>
     <div th:if="${notRegistered}" th:text="#{notRegistered}" class="alert alert-danger col-sm-5 offset-3 text-center">Not registered</div>
+    <div th:if="${errorMessage}" th:text="${errorMessage}" class="alert alert-danger col-sm-5 offset-3 text-center">Error message</div>
     <div th:if="${param.logout}" class="alert alert-danger col-sm-5 offset-3 text-center" th:text="#{loggedOut}">You have been logged out.</div>
 
 
