--- a/src/main/resources/templates/users/user-change-password-form.html
+++ b/src/main/resources/templates/users/user-change-password-form.html
@@ -24,7 +24,7 @@
     <br />
 
     <form th:action="@{'/users/changePasswordForUser/' + ${id}}" action="#" method="post" class="form-horizontal">
-        <div th:if="${errorMessage}" th:text="${errorMessage}" class="alert alert-danger">Message</div>
+        <div th:if="${notMatches}" th:text="#{notMatches}" class="alert alert-danger col-sm-5 offset-3 text-center">Passwords do not match</div>
 
         <div class="row mb-3">
             <div class="col-sm-2 form-control-plaintext offset-sm-1">
