--- a/src/main/resources/templates/changePassword.html
+++ b/src/main/resources/templates/changePassword.html
@@ -11,35 +11,73 @@
 
     <link rel="stylesheet" type="text/css" th:href="@{/css/font-awesome.min.css}"/>
 
-<title>Reset Password</title>
+    <script th:src="@{/js/jquery-1.7.2.js}"></script>
+
+    <script th:src="@{/js/pwstrength.js}"></script>
+
+
+    <title th:text="#{changePassword}">Change Password</title>
 </head>
 <body>
     <div class="container">
-        <h1>Reset Password</h1>
+        <br><br>
+        <h1 class="offset-3 px-3" th:text="#{changePassword}">Change Password</h1>
         <br />
 
         <form th:action="@{/users/savePassword}" action="#" method="post" class="form-horizontal">
-            <div th:if="${errorMessage}" th:text="${errorMessage}" class="alert alert-danger">Message</div>
+            <div th:if="${notMatches}" th:text="#{notMatches}" class="alert alert-danger col-sm-5 offset-3 text-center">Passwords do not match</div>
 
-            <div class="form-group">
-                <label class="control-label col-xs-2" for="password">Password</label>
-                <div class="col-xs-10">
-                    <input id="password" type="password" name="password" />
+            <div class="row mb-3">
+                <div class="col-sm-2 form-control-plaintext offset-sm-1">
+                    <h6 th:text="#{password} + ':'" class="pull-right">Password:</h6>
+                </div>
+                <div class="col-sm-5">
+                    <input id="password" type="password" name="password" class="form-control" th:placeholder="#{password}"/>
                 </div>
             </div>
-            <div class="form-group">
-                <label class="control-label col-xs-2" for="passwordConfirmation">Password Confirmation</label>
-                <div class="col-xs-10">
-                    <input id="passwordConfirmation" type="password" name="passwordConfirmation" />
+
+            <div class="row mb-3">
+                <div class="col-sm-2 form-control-plaintext offset-sm-1">
+                    <h6 th:text="#{passwordConfirmation} + ':'" class="pull-right">Password confirmation:</h6>
+                </div>
+                <div class="col-sm-5">
+                    <input id="passwordConfirmation" type="password" name="passwordConfirmation" class="form-control" th:placeholder="#{passwordConfirmation}"/>
                 </div>
             </div>
+
             <input id="token" type="hidden" name="token" th:value="${token}" />
-            <div class="form-actions col-xs-offset-2 col-xs-10">
-                <input type="submit" class="btn btn-primary" value="Reset Password" />
+            <div class="row">
+                <button type="submit" class="btn-sm btn-primary offset-6" th:text="#{changePassword}">Change password</button>
             </div>
         </form>
 
-        <br /> <a class="btn btn-primary" th:href="@{/login}">Sign In</a>
+        <br /> <a class="btn-sm btn-primary offset-6" th:href="@{/login}" th:text="#{signIn}">Sign In</a>
     </div>
+
+    <script type="text/javascript">
+        $(document)
+            .ready(
+                function() {
+                    options = {
+                        common : {
+                            minChar : 4
+                        },
+                        ui : {
+                            showVerdictsInsideProgressBar : true,
+                            showErrors : true,
+                            errorMessages : {
+                                wordLength : 'Your password is too short',
+                                wordNotEmail : 'Do not use your email as your password'
+                                // wordSequences : 'Your password contains sequences',
+                                // wordLowercase : 'Use lower case characters',
+                                // wordUppercase : 'Use upper case characters',
+                                // wordOneNumber : 'Use numbers',
+                                // wordOneSpecialChar : 'Use special characters: [~!@#$%^&amp;*,_?]'
+                            }
+                        }
+                    };
+                    $('#password').pwstrength(options);
+                });
+    </script>
 </body>
 </html>
