Fix cookies issue in loginPage.html

--- a/src/main/resources/templates/loginPage.html
+++ b/src/main/resources/templates/loginPage.html
@@ -39,7 +39,7 @@
             <input id="password" class="form-control col-sm-4" th:placeholder="#{password}" type="password" name="password"/>
         </div>
         <div class="form-check offset-4 mb-3">
-            <input type="checkbox" class="form-check-input" id="remember" value="true">
+            <input type="checkbox" class="form-check-input" id="remember" name="remember" value="true">
             <label class="form-check-label" th:text="#{rememberMe}" for="remember">Check me out</label>
         </div>
         <div class="form-actions col-xs-offset-2 col-xs-10">
