--- a/src/main/resources/templates/fragments/menu.html
+++ b/src/main/resources/templates/fragments/menu.html
@@ -28,7 +28,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-                <a class="nav-item nav-link active" href="#" th:href="@{/documents/list}" th:text="#{documents}">Documents <span class="sr-only">(current)</span></a>
+                <a class="nav-item nav-link" href="#" th:href="@{/documents/list}" th:text="#{documents}">Documents <span class="sr-only">(current)</span></a>
                 <a class="nav-item nav-link" href="#" th:href="@{/departments/list}" th:text="#{index.section.departments}">Departments</a>
                 <a class="nav-item nav-link" href="#" th:href="@{/changenotices/list}" th:text="#{changeNotices}">Changes</a>
                 <a class="nav-item nav-link" href="#" th:href="@{/externaldispatches/list}" th:text="#{externalDispatches}">Externals</a>
