--- a/src/main/resources/templates/departments/department-list.html
+++ b/src/main/resources/templates/departments/department-list.html
@@ -5,12 +5,11 @@
 
     <link th:href="@{/css/bootstrap-4.5.0-dist/css/bootstrap.min.css}" rel="stylesheet" media="screen"/>
 
-    <script th:src="@{/static/js/jquery.min.js}"></script>
+    <script th:src="@{/js/jquery-1.7.2.js}"></script>
 
     <link th:href="@{/css/custom.css}" rel="stylesheet" media="screen"/>
 
     <link rel="stylesheet" type="text/css" th:href="@{/css/font-awesome.min.css}"/>
-
 
     <title th:text="#{departments.headline}">List of Departments</title>
 </head>
@@ -21,8 +20,7 @@
 
     <div class="container">
 
-
-        <br><br>
+        <br>
 
         <h3 th:text="#{departments.headline}">List of Departments</h3>
 
