--- a/src/main/resources/templates/users/user-change-password-form.html
+++ b/src/main/resources/templates/users/user-change-password-form.html
@@ -18,6 +18,11 @@
     <title th:text="#{changePassword}">Change Password</title>
 </head>
 <body>
+
+    <div class="container" th:replace="fragments/menu :: menu">
+        <p>menu</p>
+    </div>
+
 <div class="container">
     <br><br>
     <h1 class="offset-3 px-3" th:text="#{changePassword}">Change Password</h1>
