--- a/src/main/resources/templates/companies/company-form.html
+++ b/src/main/resources/templates/companies/company-form.html
@@ -5,7 +5,7 @@
 
     <link th:href="@{/css/bootstrap-4.5.0-dist/css/bootstrap.min.css}" rel="stylesheet" media="screen"/>
 
-    <script th:src="@{/static/js/jquery.min.js}"></script>
+    <script th:src="@{/js/jquery-1.7.2.js}"></script>
 
     <link th:href="@{/css/custom.css}" rel="stylesheet" media="screen"/>
 
@@ -14,16 +14,14 @@
     <title th:text="#{${company.isNew() ? 'saveCompanyFormTitle' : 'updateCompanyFormTitle'}}">Save Company</title>
 </head>
 <body>
+
+    <div class="container" th:replace="fragments/menu :: menu">
+        <p>menu</p>
+    </div>
+
     <div class="container">
 
-        <a href="#" onclick="goBack()" th:text="#{goBack}">Go Back</a>
-        <script>
-            function goBack() {
-                window.history.back();
-            }
-        </script>
-
-        <br><br>
+        <br>
 
         <h3 th:text="#{companyDirectory}">Company Directory</h3>
 
