--- a/src/main/resources/templates/documents/document-info.html
+++ b/src/main/resources/templates/documents/document-info.html
@@ -5,7 +5,7 @@
 
     <link th:href="@{/css/bootstrap-4.5.0-dist/css/bootstrap.min.css}" rel="stylesheet" media="screen"/>
 
-    <script th:src="@{/static/js/jquery.min.js}"></script>
+    <script th:src="@{/js/jquery-1.7.2.js}"></script>
 
     <link th:href="@{/css/custom.css}" rel="stylesheet" media="screen"/>
 
@@ -15,11 +15,14 @@
 </head>
 <body>
 
-    <div class="container">
+    <div class="container" th:replace="fragments/menu :: menu">
+        <p>menu</p>
+    </div>
 
-        <a th:href="@{/documents/list}" th:text="#{toListOfDocuments}">To List of Documents</a>
 
-        <br><br>
+<div class="container">
+
+        <br>
 
         <h3 th:text="#{documentDirectory}">Document Directory</h3>
 
