--- a/src/main/resources/templates/documents/document-list.html
+++ b/src/main/resources/templates/documents/document-list.html
@@ -5,7 +5,7 @@
 
     <link th:href="@{/css/bootstrap-4.5.0-dist/css/bootstrap.min.css}" rel="stylesheet" media="screen"/>
 
-    <script th:src="@{/static/js/jquery.min.js}"></script>
+    <script th:src="@{/js/jquery-1.7.2.js}"></script>
 
     <link th:href="@{/css/custom.css}" rel="stylesheet" media="screen"/>
 
@@ -16,11 +16,13 @@
 </head>
 <body>
 
+    <div class="container" th:replace="fragments/menu :: menu">
+        <p>menu</p>
+    </div>
+
     <div class="container">
 
-        <a th:href="@{/}" th:text="#{backToHomePage}">Back to Home page</a>
-
-        <br><br>
+        <br>
 
         <h3 th:text="#{documents.headline}">List of Documents</h3>
 
@@ -108,7 +110,7 @@
             </form>
         </div>
 
-        <br><br>
+        <br>
 
         <a th:href="@{/documents/showAddForm}" class="btn btn-primary btn-sm mb-3" th:text="#{documents.addNew}">Add Document</a>
 
