--- a/src/main/resources/templates/users/user-update-form.html
+++ b/src/main/resources/templates/users/user-update-form.html
@@ -5,6 +5,8 @@
 
     <link th:href="@{/css/bootstrap-4.5.0-dist/css/bootstrap.min.css}" rel="stylesheet" media="screen"/>
 
+    <script th:src="@{/js/jquery-1.7.2.js}"></script>
+
     <link th:href="@{/css/custom.css}" rel="stylesheet" media="screen"/>
 
     <link rel="stylesheet" type="text/css" th:href="@{/css/font-awesome.min.css}"/>
