--- a/src/main/resources/templates/departments/department-info.html
+++ b/src/main/resources/templates/departments/department-info.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
 
@@ -67,7 +67,7 @@
                 </div>
             </div>
 
-            <div class="row px-5">
+            <div class="row px-5" sec:authorize="hasRole('ROLE_ADMIN')">
                 <div class="col-sm-3">
 
                 </div>
