--- a/src/main/resources/templates/users/user-list.html
+++ b/src/main/resources/templates/users/user-list.html
@@ -28,7 +28,7 @@
         <hr>
 
         <nav class="navbar navbar-light bg-light">
-            <form class="form-inline" th:action="@{/users/list}" method="get">
+            <form class="form-inline" th:action="${pageMark} == 'all' ? @{/users/list} : @{/users/list/active}" method="get">
                 <input class="form-control mr-sm-2" type="search" th:placeholder="#{search}" aria-label="Search" th:name="email" th:value="${param.email}">
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit" th:text="#{search}">Search</button>
             </form>
@@ -37,6 +37,7 @@
         <br>
 
         <a th:href="@{/users/showAddForm}" class="btn btn-primary btn-sm mb-3" th:text="#{addUser}">Add User</a>
+        <a th:href="${pageMark} == 'all' ? @{/users/list/active} : @{/users/list}" class="btn btn-primary btn-sm mb-3" th:text="#{${pageMark == 'all' ? 'showActiveUsers' : 'showAll'}}">Show active users</a>
 
         <table class="table table-bordered table-hover">
             <thead class="thead-dark text-center">
