--- a/src/main/resources/templates/companies/company-list.html
+++ b/src/main/resources/templates/companies/company-list.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sd="http://www.w3.org/1999/xhtml">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sd="http://www.w3.org/1999/xhtml" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
 
@@ -41,7 +41,7 @@
 
         <br><br>
 
-        <a th:href="@{/companies/showAddForm}" class="btn btn-primary btn-sm mb-3" th:text="#{companies.addNew}">Add Company</a>
+        <a th:href="@{/companies/showAddForm}" class="btn btn-primary btn-sm mb-3" th:text="#{companies.addNew}" sec:authorize="hasAnyRole('ROLE_ADMIN', 'ROLE_OTD_WORKER')">Add Company</a>
 
         <table class="table table-bordered table-hover">
             <thead class="thead-dark text-center">
