--- a/src/main/resources/templates/documents/document-changenotices.html
+++ b/src/main/resources/templates/documents/document-changenotices.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
 
@@ -44,7 +44,7 @@
                     <th class="align-middle" th:text="#{issueDate}">Issue date</th>
                     <th class="align-middle" th:text="#{developer}">Department</th>
                     <th class="align-middle" th:text="#{changeCode}">Change code</th>
-                    <th class="align-middle" th:text="#{action}">Action</th>
+                    <th class="align-middle" sec:authorize="hasAnyRole('ROLE_ADMIN', 'ROLE_OTD_WORKER')" th:text="#{action}">Action</th>
                 </tr>
             </thead>
             <tbody>
@@ -56,7 +56,7 @@
                     <td class="align-middle text-center" th:text="${entry.value.issueDate}"></td>
                     <td class="align-middle text-center" th:text="${entry.value.department} == null ? '' : ${entry.value.department.name}"></td>
                     <td class="align-middle text-center" th:text="${entry.value.changeCode}"></td>
-                    <td class="align-middle text-center">
+                    <td class="align-middle text-center" sec:authorize="hasAnyRole('ROLE_ADMIN', 'ROLE_OTD_WORKER')">
                         <a class="btn btn-sm btn-outline-danger"
                            th:href="@{'/documents/removeChange/' + ${document.id} + '/' + ${entry.value.id}}" onclick="if (!(confirm('Are you sure?'))) return false" th:text="#{remove}">Remove</a>
                     </td>
