--- a/src/main/resources/templates/documents/document-externaldispatches.html
+++ b/src/main/resources/templates/documents/document-externaldispatches.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
 
@@ -44,7 +44,7 @@
                     <th class="align-middle" th:text="#{dispatchDate}">Dispatch date</th>
                     <th class="align-middle" th:text="#{letterOutgoingNumber}">Letter outgoing number</th>
                     <th class="align-middle" th:text="#{waybill}">Waybill</th>
-                    <th class="align-middle" th:text="#{action}">Action</th>
+                    <th class="align-middle" th:text="#{action}" sec:authorize="hasAnyRole('ROLE_ADMIN', 'ROLE_OTD_WORKER')">Action</th>
                 </tr>
             </thead>
             <tbody>
@@ -57,7 +57,7 @@
                         <a th:href="@{'/externaldispatches/showExternalDispatchInfo/' + ${tempExternal.key.id}}" th:text="${tempExternal.key.letterOutgoingNumber}"></a>
                     </td>
                     <td class="align-middle text-center" th:text="${tempExternal.key.waybill}"></td>
-                    <td class="align-middle text-center">
+                    <td class="align-middle text-center" sec:authorize="hasAnyRole('ROLE_ADMIN', 'ROLE_OTD_WORKER')">
                         <a class="btn btn-sm btn-outline-danger mr-2" th:if="${tempExternal.value}"
                            th:href="@{'/documents/deregisterExternal/' + ${id} + '/' + ${tempExternal.key.id}}" onclick="if (!(confirm('Are you sure?'))) return false" th:text="#{deregister}">Deregister</a>
                         <a class="btn btn-sm btn-outline-danger" th:if="${tempExternal.value}"
