--- a/src/main/resources/templates/documents/document-list.html
+++ b/src/main/resources/templates/documents/document-list.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sd="http://www.w3.org/1999/xhtml">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sd="http://www.w3.org/1999/xhtml" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
 
@@ -112,7 +112,9 @@
 
         <br>
 
-        <a th:href="@{/documents/showAddForm}" class="btn btn-primary btn-sm mb-3" th:text="#{documents.addNew}">Add Document</a>
+        <div sec:authorize="hasAnyRole('ROLE_ADMIN', 'ROLE_OTD_WORKER')">
+            <a th:href="@{/documents/showAddForm}" class="btn btn-primary btn-sm mb-3" th:text="#{documents.addNew}">Add Document</a>
+        </div>
 
         <table class="table table-bordered table-hover">
             <thead class="thead-dark text-center">
