--- a/src/main/resources/templates/externaldispatches/externaldispatch-info.html
+++ b/src/main/resources/templates/externaldispatches/externaldispatch-info.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
 
@@ -85,7 +85,7 @@
             </div>
         </div>
 
-        <div class="row px-5">
+        <div class="row px-5" sec:authorize="hasAnyRole('ROLE_ADMIN', 'ROLE_OTD_WORKER')">
             <div class="col-sm-2">
 
             </div>
@@ -102,7 +102,7 @@
 
 
 
-    <form th:action="@{'/externaldispatches/addDocument/' + ${externalDispatch.id}}" method="post">
+    <form th:action="@{'/externaldispatches/addDocument/' + ${externalDispatch.id}}" method="post" sec:authorize="hasAnyRole('ROLE_ADMIN', 'ROLE_OTD_WORKER')">
         <div class="row mb-3">
             <div class="col-sm-4">
                 <input type="text" th:class="${errorMessage == null} ? 'form-control' : 'form-control is-invalid'" th:name="newDocument" th:value="${errorMessage != null} ? ${param.newDocument} : ''" th:placeholder="#{decimalNumber}"/>
@@ -130,7 +130,7 @@
                 <th class="align-middle" th:text="#{decimalNumber}">Decimal number</th>
                 <th class="align-middle" th:text="#{name}">Name</th>
                 <th class="align-middle" th:text="#{active}">Active</th>
-                <th class="align-middle" th:text="#{action}">Action</th>
+                <th class="align-middle" th:text="#{action}" sec:authorize="hasAnyRole('ROLE_ADMIN', 'ROLE_OTD_WORKER')">Action</th>
             </thead>
             <tbody>
                 <tr th:each="entry : ${externalDispatch.documents}" th:class="${entry.value} ? 'table-default' : 'table-danger'">
@@ -139,7 +139,7 @@
                     </td>
                     <td class="align-middle" th:text="${entry.key.name}"></td>
                     <td class="align-middle text-center" th:text="#{${entry.value ? 'yes' : 'no'}}"></td>
-                    <td class="align-middle text-center">
+                    <td class="align-middle text-center" sec:authorize="hasAnyRole('ROLE_ADMIN', 'ROLE_OTD_WORKER')">
                         <a class="btn btn-sm btn-outline-danger"
                            th:href="@{'/externaldispatches/removeDocument/' + ${externalDispatch.id} + '/' + ${entry.key.id}}" onclick="if (!(confirm('Are you sure?'))) return false" th:text="#{remove}">Remove</a>
                     </td>
