--- a/src/main/resources/templates/externaldispatches/externaldispatch-list.html
+++ b/src/main/resources/templates/externaldispatches/externaldispatch-list.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sd="http://www.w3.org/1999/xhtml">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sd="http://www.w3.org/1999/xhtml" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
 
@@ -27,7 +27,7 @@
 
     <hr>
 
-    <a th:href="@{/externaldispatches/showAddForm}" class="btn btn-primary btn-sm mb-3" th:text="#{externaldispatches.addNew}">Add External Dispatch</a>
+    <a th:href="@{/externaldispatches/showAddForm}" class="btn btn-primary btn-sm mb-3" th:text="#{externaldispatches.addNew}" sec:authorize="hasAnyRole('ROLE_ADMIN', 'ROLE_OTD_WORKER')">Add External Dispatch</a>
 
     <table class="table table-bordered table-hover">
         <thead class="thead-dark text-center">
