--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
 
@@ -130,7 +130,7 @@
 
         <div class="row">
             <div class="col-md-4">
-                <a th:href="@{/users/list}">
+                <a th:href="@{/users/list}" sec:authorize="hasAnyRole('ROLE_ADMIN', 'ROLE_OTD_WORKER')">
                     <img th:src="@{/images/users.png}"/>
                     <h4 class="text-center" th:text="#{users}">Users</h4>
                 </a>
