--- a/src/main/resources/templates/internaldispatches/internaldispatch-albums.html
+++ b/src/main/resources/templates/internaldispatches/internaldispatch-albums.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sd="http://www.w3.org/1999/xhtml">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sd="http://www.w3.org/1999/xhtml" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
 
@@ -50,7 +50,7 @@
                 <th class="align-middle"><a class="sorted text-light" sd:pagination-sort="internalHandlerName" th:text="#{handlerName}">Handler name</a></th>
                 <th class="align-middle" th:text="#{handlerPhoneNumber}">Handler phone number</th>
                 <th class="align-middle"><a class="sorted text-light" sd:pagination-sort="receivedInternalDate" th:text="#{receivedDate}">Received date</a></th>
-                <th class="align-middle" th:text="#{action}">Action</th>
+                <th class="align-middle" th:text="#{action}" sec:authorize="hasAnyRole('ROLE_ADMIN', 'ROLE_OTD_WORKER')">Action</th>
             </tr>
         </thead>
         <tbody>
@@ -63,7 +63,7 @@
                 <td class="align-middle text-center" th:text="${tempAlbum.internalHandlerName}"></td>
                 <td class="align-middle text-center" th:text="${tempAlbum.internalHandlerPhoneNumber}"></td>
                 <td class="align-middle text-center" th:text="${tempAlbum.receivedInternalDate}"></td>
-                <td class="align-middle text-center">
+                <td class="align-middle text-center" sec:authorize="hasAnyRole('ROLE_ADMIN', 'ROLE_OTD_WORKER')">
                     <a class="btn btn-sm btn-outline-danger"
                        th:href="@{'/internaldispatches/showChangeHandlerForm/' + ${tempAlbum.id}}" th:text="#{changeHandler}">Change handler</a>
                 </td>
