--- a/src/main/resources/templates/internaldispatches/internaldispatch-list.html
+++ b/src/main/resources/templates/internaldispatches/internaldispatch-list.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sd="http://www.w3.org/1999/xhtml">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sd="http://www.w3.org/1999/xhtml" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
 
@@ -28,7 +28,7 @@
     <hr>
 
 
-    <a th:href="@{/internaldispatches/showAddForm}" class="btn btn-primary btn-sm mb-3" th:text="#{internaldispatches.addNew}">Add Internal Dispatch</a>
+    <a th:href="@{/internaldispatches/showAddForm}" class="btn btn-primary btn-sm mb-3" th:text="#{internaldispatches.addNew}" sec:authorize="hasAnyRole('ROLE_ADMIN', 'ROLE_OTD_WORKER')">Add Internal Dispatch</a>
 
     <table class="table table-bordered table-hover">
         <thead class="thead-dark text-center">
