--- a/src/main/resources/templates/internaldispatches/internaldispatch-albums.html
+++ b/src/main/resources/templates/internaldispatches/internaldispatch-albums.html
@@ -27,19 +27,13 @@
 
     <hr>
 
-    <div class="container-fluid p-3 my-3 bg-dark text-white">
-        <form action="#" th:action="@{/internaldispatches/list/albums}" method="get">
-            <div class="row">
-                <div class="col-sm-3 m-1">
-                    <input type="text" class="form-control" th:name="albumName" th:value="${param.albumName}" th:placeholder="#{albumDecimalNumber}">
-                </div>
-                <button type="submit" class="btn btn-info col-2 m-1" th:text="#{search}">Search</button>
-                <a th:href="@{/internaldispatches/list/albums}" class="btn btn-danger col-2 m-1" th:text="#{clearFilters}">Clear filters</a>
-            </div>
-        </form>
-    </div>
 
-    <br><br>
+    <nav class="navbar navbar-light bg-dark">
+        <form class="form-inline" th:action="@{/internaldispatches/list/albums}" method="get">
+            <input class="form-control mr-sm-4" type="search" th:placeholder="#{decimalNumber}" aria-label="Search" th:name="albumName" th:value="${param.albumName}">
+            <button class="btn btn-primary my-2 my-sm-0" type="submit" th:text="#{search}">Search</button>
+        </form>
+    </nav>
 
     <table class="table table-bordered table-hover">
         <thead class="thead-dark text-center">
