--- a/src/main/resources/templates/documents/document-list.html
+++ b/src/main/resources/templates/documents/document-list.html
@@ -28,7 +28,11 @@
 
         <hr>
 
-        <div class="container-fluid p-3 my-3 bg-dark text-white">
+        <div sec:authorize="hasAnyRole('ROLE_ADMIN', 'ROLE_OTD_WORKER')">
+            <a th:href="@{/documents/showAddForm}" class="btn btn-primary btn-sm mb-3" th:text="#{documents.addNew}">Add Document</a>
+        </div>
+
+        <div class="container-fluid p-3 bg-dark text-white">
             <form action="#" th:action="@{/documents/list}" method="get">
                 <div class="row mb-3">
                     <div class="col-sm-2">
@@ -108,12 +112,6 @@
                 <button type="submit" class="btn btn-info col-2" th:text="#{search}">Search</button>
                 <a th:href="@{/documents/list}" class="btn btn-danger col-2" th:text="#{clearFilters}">Clear filters</a>
             </form>
-        </div>
-
-        <br>
-
-        <div sec:authorize="hasAnyRole('ROLE_ADMIN', 'ROLE_OTD_WORKER')">
-            <a th:href="@{/documents/showAddForm}" class="btn btn-primary btn-sm mb-3" th:text="#{documents.addNew}">Add Document</a>
         </div>
 
         <table class="table table-bordered table-hover">
